istio/ingress.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: backend
  name: hotel
spec:
  hosts:
    - "*"
  gateways:
    - api-gateway
  http:
    - match:
        - uri:
            prefix: "/hotel"
      route:
        - destination:
            host: hotel.backend.svc.cluster.local
            port:
              number: 8084
