istio/authorizationPolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  namespace: backend
  name: hotel
spec:	
  selector:
    matchLabels:
       app: hotel
  rules:
#    {}
    - to:
        - operation:
            methods: [ "GET", "PUT", "POST", "DELETE" ]
            paths: [ "/accommodation/health", "/accommodation*", "/accommodation/**", "/accommodation/price/*", "/accommodation/price/**" ]
#      from:
#        - source:
#            requestPrincipals: [ "*" ]
#      when:
#        - key: request.auth.claims[realm_access][roles]
#          values: [ "guest", "host" ]
